// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotPlayingButton when not playing renders as expected 1`] = `
<WithStyles(ForwardRef(IconButton))
  aria-label="Not Playing"
  onClick={[Function]}
>
  <Memo(ForwardRef(HighlightOffTwoToneIcon))
    className="test"
    color="primary"
  />
</WithStyles(ForwardRef(IconButton))>
`;

exports[`NotPlayingButton when playing renders as expected 1`] = `
<WithStyles(ForwardRef(IconButton))
  aria-label="Not Playing"
  onClick={[Function]}
>
  <Memo(ForwardRef(HighlightOffIcon))
    className="test"
  />
</WithStyles(ForwardRef(IconButton))>
`;
